<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/m24"
    tools:showIn="@layout/activity_tip">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textSize="60sp"
        app:fontFamily="@font/poppins_semi_bold"
        tools:text="1.00e" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/add_description"
        android:textColor="@color/small_txt"
        android:textSize="@dimen/add_description_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/m24"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tip_5_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:background="@drawable/shape_primary_btn"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/_5"
            android:textColor="@color/bckg"
            android:textSize="26sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tip_10_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginHorizontal="@dimen/m8"
            android:layout_weight="1"
            android:background="@drawable/shape_primary_btn"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/_10"
            android:textColor="@color/bckg"
            android:textSize="26sp" />

        <FrameLayout
            android:id="@+id/custom_tip_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginHorizontal="@dimen/m8"
            android:layout_weight="1"
            android:background="@drawable/shape_primary_btn">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/custom_tip"
                android:textColor="@color/bckg"
                android:textSize="16sp" />

        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/no_tip_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/shape_secondary_btn"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/no_tip"
        android:textColor="@color/primary"
        android:textSize="18sp" />

</LinearLayout>