<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/bckg"
    android:orientation="vertical"
    android:padding="@dimen/m16">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/cancel_payment"
        android:textSize="35sp"
        app:fontFamily="@font/poppins_semi_bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m32"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cancel_payment_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:background="@drawable/shape_secondary_btn"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/yes"
            android:textColor="@color/primary"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dismiss_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginStart="@dimen/m16"
            android:layout_weight="1"
            android:background="@drawable/shape_primary_btn"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/no"
            android:textColor="@color/bckg"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>