<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/m16"
    android:orientation="vertical"
    android:visibility="gone"
    tools:showIn="@layout/activity_tip">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/custom_tip"
        android:textSize="32sp"
        app:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/custom_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/euro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m4"
        android:includeFontPadding="false"
        android:text="@string/euro"
        android:textSize="40sp"
        app:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m32"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:background="@drawable/shape_secondary_btn"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/cancel"
            android:textColor="@color/primary"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ok_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginStart="@dimen/m16"
            android:layout_weight="1"
            android:background="@drawable/shape_primary_btn"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/ok"
            android:textColor="@color/bckg"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>