<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/m16">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="32sp"
        app:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:padding="@dimen/m12"
        android:scaleType="fitXY"
        android:src="@drawable/img_back_day"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/primary" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/m16"
                android:layout_weight="2"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_marginTop="@dimen/m16"
                    android:gravity="center_vertical|end"
                    android:text="@string/dark_mode"
                    android:textColor="@color/small_txt"
                    android:textSize="24sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_marginTop="@dimen/m16"
                    android:gravity="center_vertical|end"
                    android:text="@string/tip_screen"
                    android:textColor="@color/small_txt"
                    android:textSize="24sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_marginTop="@dimen/m16"
                    android:gravity="center_vertical|end"
                    android:text="@string/auto_print_receipt"
                    android:textColor="@color/small_txt"
                    android:textSize="24sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_marginTop="@dimen/m16"
                    android:gravity="center_vertical|end"
                    android:text="@string/language"
                    android:textColor="@color/small_txt"
                    android:textSize="24sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_marginTop="@dimen/m16"
                    android:gravity="center_vertical|end"
                    android:text="@string/currency"
                    android:textColor="@color/small_txt"
                    android:textSize="24sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_marginTop="@dimen/m16"
                    android:gravity="center_vertical|end"
                    android:text="@string/settings"
                    android:textColor="@color/small_txt"
                    android:textSize="24sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_marginTop="@dimen/m16"
                    android:gravity="center_vertical|end"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/small_txt"
                    android:textSize="24sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_marginTop="@dimen/m16"
                    android:gravity="center_vertical|end"
                    android:text="@string/terms_of_service"
                    android:textColor="@color/small_txt"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/dark_mode_switch"
                    style="@style/Switch"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginTop="@dimen/m16"
                    android:checked="true" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/tip_screen_switch"
                    style="@style/Switch"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginTop="@dimen/m16"
                    android:checked="true" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/print_switch"
                    style="@style/Switch"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginTop="@dimen/m16"
                    android:checked="true" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/languages"
                    android:layout_width="wrap_content"
                    android:paddingEnd="@dimen/m24"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_marginTop="@dimen/m16"
                    android:layout_marginEnd="@dimen/m16"
                    android:background="@drawable/custom_spinner"
                    android:spinnerMode="dropdown" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/currencies"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_marginTop="@dimen/m16"
                    android:paddingEnd="@dimen/m24"
                    android:background="@drawable/custom_spinner"
                    android:spinnerMode="dropdown" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/settings"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_marginTop="@dimen/m16"
                    android:gravity="start|center_vertical"
                    android:text="@string/open"
                    android:textColor="@color/primary"
                    android:textSize="24sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_marginTop="@dimen/m16"
                    android:gravity="start|center_vertical"
                    android:text="@string/view"
                    android:textColor="@color/primary"
                    android:textSize="24sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/terms"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/settings_row_height"
                    android:layout_marginTop="@dimen/m16"
                    android:gravity="start|center_vertical"
                    android:text="@string/view"
                    android:textColor="@color/primary"
                    android:textSize="24sp" />


            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>